samples/_failures_safe/1761705631_77fbfb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00ca6b16.c: In function ‘main’:
./samples/SAFE/__tmp_00ca6b16.c:158:12: error: missing terminating " character
  158 |     printf("Analysis completed
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_00ca6b16.c:158:5: error: expected expression at end of input
  158 |     printf("Analysis completed
      |     ^~~~~~
./samples/SAFE/__tmp_00ca6b16.c:158:5: error: expected declaration or statement at end of input
